parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    EQUALS

Grammar

Rule 0     S' -> re
Rule 1     re -> alternation
Rule 2     re -> simple
Rule 3     alternation -> re PIPE simple
Rule 4     simple -> concatenation
Rule 5     simple -> basic
Rule 6     concatenation -> simple basic
Rule 7     basic -> elementary
Rule 8     basic -> asterisk
Rule 9     basic -> plus
Rule 10    basic -> optional
Rule 11    basic -> nrepeat
Rule 12    elementary -> group
Rule 13    elementary -> directionset
Rule 14    elementary -> command
Rule 15    elementary -> literal
Rule 16    elementary -> charclass
Rule 17    elementary -> any
Rule 18    elementary -> nomatch
Rule 19    elementary -> anchor
Rule 20    asterisk -> elementary ASTERISK
Rule 21    plus -> elementary PLUS
Rule 22    optional -> elementary QMARK
Rule 23    nrepeat -> elementary LBRACE number RBRACE
Rule 24    nrepeat -> elementary LBRACE COMMA number RBRACE
Rule 25    nrepeat -> elementary LBRACE number COMMA RBRACE
Rule 26    nrepeat -> elementary LBRACE number COMMA number RBRACE
Rule 27    any -> DOT
Rule 28    nomatch -> EMARK
Rule 29    number -> DIGIT
Rule 30    number -> DIGIT number
Rule 31    group -> LPARENS groupbody RPARENS
Rule 32    groupbody -> QMARK specialgroup
Rule 33    groupbody -> basicgroup
Rule 34    specialgroup -> UNDERSCORE lengthcheck
Rule 35    specialgroup -> PIPE stationarygroup
Rule 36    specialgroup -> COLON nocapture
Rule 37    lengthcheck -> LPARENS number RPARENS re
Rule 38    stationarygroup -> re
Rule 39    nocapture -> re
Rule 40    basicgroup -> re
Rule 41    charclass -> pcharclass
Rule 42    charclass -> ncharclass
Rule 43    pcharclass -> LSQBRACKET classitems RSQBRACKET
Rule 44    ncharclass -> LSQBRACKET CARET classitems RSQBRACKET
Rule 45    classitems -> literal
Rule 46    classitems -> literal classitems
Rule 47    directionset -> CARET DIGIT
Rule 48    anchor -> DOLLAR DIGIT
Rule 49    command -> COMMAND
Rule 50    literal -> LITERAL
Rule 51    literal -> DIGIT

Terminals, with rules where they appear

ASTERISK             : 20
CARET                : 44 47
COLON                : 36
COMMA                : 24 25 26
COMMAND              : 49
DIGIT                : 29 30 47 48 51
DOLLAR               : 48
DOT                  : 27
EMARK                : 28
EQUALS               : 
LBRACE               : 23 24 25 26
LITERAL              : 50
LPARENS              : 31 37
LSQBRACKET           : 43 44
PIPE                 : 3 35
PLUS                 : 21
QMARK                : 22 32
RBRACE               : 23 24 25 26
RPARENS              : 31 37
RSQBRACKET           : 43 44
UNDERSCORE           : 34
error                : 

Nonterminals, with rules where they appear

alternation          : 1
anchor               : 19
any                  : 17
asterisk             : 8
basic                : 5 6
basicgroup           : 33
charclass            : 16
classitems           : 43 44 46
command              : 14
concatenation        : 4
directionset         : 13
elementary           : 7 20 21 22 23 24 25 26
group                : 12
groupbody            : 31
lengthcheck          : 34
literal              : 15 45 46
ncharclass           : 42
nocapture            : 36
nomatch              : 18
nrepeat              : 11
number               : 23 24 25 26 26 30 37
optional             : 10
pcharclass           : 41
plus                 : 9
re                   : 3 37 38 39 40 0
simple               : 2 3 6
specialgroup         : 32
stationarygroup      : 35

Parsing method: LALR

state 0

    (0) S' -> . re
    (1) re -> . alternation
    (2) re -> . simple
    (3) alternation -> . re PIPE simple
    (4) simple -> . concatenation
    (5) simple -> . basic
    (6) concatenation -> . simple basic
    (7) basic -> . elementary
    (8) basic -> . asterisk
    (9) basic -> . plus
    (10) basic -> . optional
    (11) basic -> . nrepeat
    (12) elementary -> . group
    (13) elementary -> . directionset
    (14) elementary -> . command
    (15) elementary -> . literal
    (16) elementary -> . charclass
    (17) elementary -> . any
    (18) elementary -> . nomatch
    (19) elementary -> . anchor
    (20) asterisk -> . elementary ASTERISK
    (21) plus -> . elementary PLUS
    (22) optional -> . elementary QMARK
    (23) nrepeat -> . elementary LBRACE number RBRACE
    (24) nrepeat -> . elementary LBRACE COMMA number RBRACE
    (25) nrepeat -> . elementary LBRACE number COMMA RBRACE
    (26) nrepeat -> . elementary LBRACE number COMMA number RBRACE
    (31) group -> . LPARENS groupbody RPARENS
    (47) directionset -> . CARET DIGIT
    (49) command -> . COMMAND
    (50) literal -> . LITERAL
    (51) literal -> . DIGIT
    (41) charclass -> . pcharclass
    (42) charclass -> . ncharclass
    (27) any -> . DOT
    (28) nomatch -> . EMARK
    (48) anchor -> . DOLLAR DIGIT
    (43) pcharclass -> . LSQBRACKET classitems RSQBRACKET
    (44) ncharclass -> . LSQBRACKET CARET classitems RSQBRACKET

    LPARENS         shift and go to state 1
    CARET           shift and go to state 18
    COMMAND         shift and go to state 26
    LITERAL         shift and go to state 23
    DIGIT           shift and go to state 16
    DOT             shift and go to state 29
    EMARK           shift and go to state 15
    DOLLAR          shift and go to state 9
    LSQBRACKET      shift and go to state 14

    basic                          shift and go to state 2
    nomatch                        shift and go to state 3
    concatenation                  shift and go to state 4
    literal                        shift and go to state 5
    asterisk                       shift and go to state 6
    ncharclass                     shift and go to state 7
    optional                       shift and go to state 8
    anchor                         shift and go to state 10
    simple                         shift and go to state 11
    plus                           shift and go to state 12
    command                        shift and go to state 13
    pcharclass                     shift and go to state 17
    elementary                     shift and go to state 19
    re                             shift and go to state 20
    directionset                   shift and go to state 21
    alternation                    shift and go to state 22
    group                          shift and go to state 24
    charclass                      shift and go to state 25
    nrepeat                        shift and go to state 27
    any                            shift and go to state 28

state 1

    (31) group -> LPARENS . groupbody RPARENS
    (32) groupbody -> . QMARK specialgroup
    (33) groupbody -> . basicgroup
    (40) basicgroup -> . re
    (1) re -> . alternation
    (2) re -> . simple
    (3) alternation -> . re PIPE simple
    (4) simple -> . concatenation
    (5) simple -> . basic
    (6) concatenation -> . simple basic
    (7) basic -> . elementary
    (8) basic -> . asterisk
    (9) basic -> . plus
    (10) basic -> . optional
    (11) basic -> . nrepeat
    (12) elementary -> . group
    (13) elementary -> . directionset
    (14) elementary -> . command
    (15) elementary -> . literal
    (16) elementary -> . charclass
    (17) elementary -> . any
    (18) elementary -> . nomatch
    (19) elementary -> . anchor
    (20) asterisk -> . elementary ASTERISK
    (21) plus -> . elementary PLUS
    (22) optional -> . elementary QMARK
    (23) nrepeat -> . elementary LBRACE number RBRACE
    (24) nrepeat -> . elementary LBRACE COMMA number RBRACE
    (25) nrepeat -> . elementary LBRACE number COMMA RBRACE
    (26) nrepeat -> . elementary LBRACE number COMMA number RBRACE
    (31) group -> . LPARENS groupbody RPARENS
    (47) directionset -> . CARET DIGIT
    (49) command -> . COMMAND
    (50) literal -> . LITERAL
    (51) literal -> . DIGIT
    (41) charclass -> . pcharclass
    (42) charclass -> . ncharclass
    (27) any -> . DOT
    (28) nomatch -> . EMARK
    (48) anchor -> . DOLLAR DIGIT
    (43) pcharclass -> . LSQBRACKET classitems RSQBRACKET
    (44) ncharclass -> . LSQBRACKET CARET classitems RSQBRACKET

    QMARK           shift and go to state 33
    LPARENS         shift and go to state 1
    CARET           shift and go to state 18
    COMMAND         shift and go to state 26
    LITERAL         shift and go to state 23
    DIGIT           shift and go to state 16
    DOT             shift and go to state 29
    EMARK           shift and go to state 15
    DOLLAR          shift and go to state 9
    LSQBRACKET      shift and go to state 14

    basic                          shift and go to state 2
    nomatch                        shift and go to state 3
    optional                       shift and go to state 8
    literal                        shift and go to state 5
    ncharclass                     shift and go to state 7
    asterisk                       shift and go to state 6
    anchor                         shift and go to state 10
    simple                         shift and go to state 11
    concatenation                  shift and go to state 4
    command                        shift and go to state 13
    nrepeat                        shift and go to state 27
    basicgroup                     shift and go to state 30
    pcharclass                     shift and go to state 17
    groupbody                      shift and go to state 31
    elementary                     shift and go to state 19
    re                             shift and go to state 32
    directionset                   shift and go to state 21
    alternation                    shift and go to state 22
    group                          shift and go to state 24
    charclass                      shift and go to state 25
    plus                           shift and go to state 12
    any                            shift and go to state 28

state 2

    (5) simple -> basic .

    LPARENS         reduce using rule 5 (simple -> basic .)
    CARET           reduce using rule 5 (simple -> basic .)
    COMMAND         reduce using rule 5 (simple -> basic .)
    LITERAL         reduce using rule 5 (simple -> basic .)
    DIGIT           reduce using rule 5 (simple -> basic .)
    DOT             reduce using rule 5 (simple -> basic .)
    EMARK           reduce using rule 5 (simple -> basic .)
    DOLLAR          reduce using rule 5 (simple -> basic .)
    LSQBRACKET      reduce using rule 5 (simple -> basic .)
    PIPE            reduce using rule 5 (simple -> basic .)
    $end            reduce using rule 5 (simple -> basic .)
    RPARENS         reduce using rule 5 (simple -> basic .)


state 3

    (18) elementary -> nomatch .

    ASTERISK        reduce using rule 18 (elementary -> nomatch .)
    PLUS            reduce using rule 18 (elementary -> nomatch .)
    QMARK           reduce using rule 18 (elementary -> nomatch .)
    LBRACE          reduce using rule 18 (elementary -> nomatch .)
    LPARENS         reduce using rule 18 (elementary -> nomatch .)
    CARET           reduce using rule 18 (elementary -> nomatch .)
    COMMAND         reduce using rule 18 (elementary -> nomatch .)
    LITERAL         reduce using rule 18 (elementary -> nomatch .)
    DIGIT           reduce using rule 18 (elementary -> nomatch .)
    DOT             reduce using rule 18 (elementary -> nomatch .)
    EMARK           reduce using rule 18 (elementary -> nomatch .)
    DOLLAR          reduce using rule 18 (elementary -> nomatch .)
    LSQBRACKET      reduce using rule 18 (elementary -> nomatch .)
    PIPE            reduce using rule 18 (elementary -> nomatch .)
    $end            reduce using rule 18 (elementary -> nomatch .)
    RPARENS         reduce using rule 18 (elementary -> nomatch .)


state 4

    (4) simple -> concatenation .

    LPARENS         reduce using rule 4 (simple -> concatenation .)
    CARET           reduce using rule 4 (simple -> concatenation .)
    COMMAND         reduce using rule 4 (simple -> concatenation .)
    LITERAL         reduce using rule 4 (simple -> concatenation .)
    DIGIT           reduce using rule 4 (simple -> concatenation .)
    DOT             reduce using rule 4 (simple -> concatenation .)
    EMARK           reduce using rule 4 (simple -> concatenation .)
    DOLLAR          reduce using rule 4 (simple -> concatenation .)
    LSQBRACKET      reduce using rule 4 (simple -> concatenation .)
    PIPE            reduce using rule 4 (simple -> concatenation .)
    $end            reduce using rule 4 (simple -> concatenation .)
    RPARENS         reduce using rule 4 (simple -> concatenation .)


state 5

    (15) elementary -> literal .

    ASTERISK        reduce using rule 15 (elementary -> literal .)
    PLUS            reduce using rule 15 (elementary -> literal .)
    QMARK           reduce using rule 15 (elementary -> literal .)
    LBRACE          reduce using rule 15 (elementary -> literal .)
    LPARENS         reduce using rule 15 (elementary -> literal .)
    CARET           reduce using rule 15 (elementary -> literal .)
    COMMAND         reduce using rule 15 (elementary -> literal .)
    LITERAL         reduce using rule 15 (elementary -> literal .)
    DIGIT           reduce using rule 15 (elementary -> literal .)
    DOT             reduce using rule 15 (elementary -> literal .)
    EMARK           reduce using rule 15 (elementary -> literal .)
    DOLLAR          reduce using rule 15 (elementary -> literal .)
    LSQBRACKET      reduce using rule 15 (elementary -> literal .)
    PIPE            reduce using rule 15 (elementary -> literal .)
    $end            reduce using rule 15 (elementary -> literal .)
    RPARENS         reduce using rule 15 (elementary -> literal .)


state 6

    (8) basic -> asterisk .

    LPARENS         reduce using rule 8 (basic -> asterisk .)
    CARET           reduce using rule 8 (basic -> asterisk .)
    COMMAND         reduce using rule 8 (basic -> asterisk .)
    LITERAL         reduce using rule 8 (basic -> asterisk .)
    DIGIT           reduce using rule 8 (basic -> asterisk .)
    DOT             reduce using rule 8 (basic -> asterisk .)
    EMARK           reduce using rule 8 (basic -> asterisk .)
    DOLLAR          reduce using rule 8 (basic -> asterisk .)
    LSQBRACKET      reduce using rule 8 (basic -> asterisk .)
    PIPE            reduce using rule 8 (basic -> asterisk .)
    $end            reduce using rule 8 (basic -> asterisk .)
    RPARENS         reduce using rule 8 (basic -> asterisk .)


state 7

    (42) charclass -> ncharclass .

    ASTERISK        reduce using rule 42 (charclass -> ncharclass .)
    PLUS            reduce using rule 42 (charclass -> ncharclass .)
    QMARK           reduce using rule 42 (charclass -> ncharclass .)
    LBRACE          reduce using rule 42 (charclass -> ncharclass .)
    LPARENS         reduce using rule 42 (charclass -> ncharclass .)
    CARET           reduce using rule 42 (charclass -> ncharclass .)
    COMMAND         reduce using rule 42 (charclass -> ncharclass .)
    LITERAL         reduce using rule 42 (charclass -> ncharclass .)
    DIGIT           reduce using rule 42 (charclass -> ncharclass .)
    DOT             reduce using rule 42 (charclass -> ncharclass .)
    EMARK           reduce using rule 42 (charclass -> ncharclass .)
    DOLLAR          reduce using rule 42 (charclass -> ncharclass .)
    LSQBRACKET      reduce using rule 42 (charclass -> ncharclass .)
    PIPE            reduce using rule 42 (charclass -> ncharclass .)
    RPARENS         reduce using rule 42 (charclass -> ncharclass .)
    $end            reduce using rule 42 (charclass -> ncharclass .)


state 8

    (10) basic -> optional .

    LPARENS         reduce using rule 10 (basic -> optional .)
    CARET           reduce using rule 10 (basic -> optional .)
    COMMAND         reduce using rule 10 (basic -> optional .)
    LITERAL         reduce using rule 10 (basic -> optional .)
    DIGIT           reduce using rule 10 (basic -> optional .)
    DOT             reduce using rule 10 (basic -> optional .)
    EMARK           reduce using rule 10 (basic -> optional .)
    DOLLAR          reduce using rule 10 (basic -> optional .)
    LSQBRACKET      reduce using rule 10 (basic -> optional .)
    PIPE            reduce using rule 10 (basic -> optional .)
    $end            reduce using rule 10 (basic -> optional .)
    RPARENS         reduce using rule 10 (basic -> optional .)


state 9

    (48) anchor -> DOLLAR . DIGIT

    DIGIT           shift and go to state 34


state 10

    (19) elementary -> anchor .

    ASTERISK        reduce using rule 19 (elementary -> anchor .)
    PLUS            reduce using rule 19 (elementary -> anchor .)
    QMARK           reduce using rule 19 (elementary -> anchor .)
    LBRACE          reduce using rule 19 (elementary -> anchor .)
    LPARENS         reduce using rule 19 (elementary -> anchor .)
    CARET           reduce using rule 19 (elementary -> anchor .)
    COMMAND         reduce using rule 19 (elementary -> anchor .)
    LITERAL         reduce using rule 19 (elementary -> anchor .)
    DIGIT           reduce using rule 19 (elementary -> anchor .)
    DOT             reduce using rule 19 (elementary -> anchor .)
    EMARK           reduce using rule 19 (elementary -> anchor .)
    DOLLAR          reduce using rule 19 (elementary -> anchor .)
    LSQBRACKET      reduce using rule 19 (elementary -> anchor .)
    PIPE            reduce using rule 19 (elementary -> anchor .)
    $end            reduce using rule 19 (elementary -> anchor .)
    RPARENS         reduce using rule 19 (elementary -> anchor .)


state 11

    (2) re -> simple .
    (6) concatenation -> simple . basic
    (7) basic -> . elementary
    (8) basic -> . asterisk
    (9) basic -> . plus
    (10) basic -> . optional
    (11) basic -> . nrepeat
    (12) elementary -> . group
    (13) elementary -> . directionset
    (14) elementary -> . command
    (15) elementary -> . literal
    (16) elementary -> . charclass
    (17) elementary -> . any
    (18) elementary -> . nomatch
    (19) elementary -> . anchor
    (20) asterisk -> . elementary ASTERISK
    (21) plus -> . elementary PLUS
    (22) optional -> . elementary QMARK
    (23) nrepeat -> . elementary LBRACE number RBRACE
    (24) nrepeat -> . elementary LBRACE COMMA number RBRACE
    (25) nrepeat -> . elementary LBRACE number COMMA RBRACE
    (26) nrepeat -> . elementary LBRACE number COMMA number RBRACE
    (31) group -> . LPARENS groupbody RPARENS
    (47) directionset -> . CARET DIGIT
    (49) command -> . COMMAND
    (50) literal -> . LITERAL
    (51) literal -> . DIGIT
    (41) charclass -> . pcharclass
    (42) charclass -> . ncharclass
    (27) any -> . DOT
    (28) nomatch -> . EMARK
    (48) anchor -> . DOLLAR DIGIT
    (43) pcharclass -> . LSQBRACKET classitems RSQBRACKET
    (44) ncharclass -> . LSQBRACKET CARET classitems RSQBRACKET

    PIPE            reduce using rule 2 (re -> simple .)
    RPARENS         reduce using rule 2 (re -> simple .)
    $end            reduce using rule 2 (re -> simple .)
    LPARENS         shift and go to state 1
    CARET           shift and go to state 18
    COMMAND         shift and go to state 26
    LITERAL         shift and go to state 23
    DIGIT           shift and go to state 16
    DOT             shift and go to state 29
    EMARK           shift and go to state 15
    DOLLAR          shift and go to state 9
    LSQBRACKET      shift and go to state 14

    pcharclass                     shift and go to state 17
    anchor                         shift and go to state 10
    basic                          shift and go to state 35
    nomatch                        shift and go to state 3
    optional                       shift and go to state 8
    literal                        shift and go to state 5
    ncharclass                     shift and go to state 7
    directionset                   shift and go to state 21
    asterisk                       shift and go to state 6
    elementary                     shift and go to state 19
    group                          shift and go to state 24
    plus                           shift and go to state 12
    command                        shift and go to state 13
    nrepeat                        shift and go to state 27
    any                            shift and go to state 28
    charclass                      shift and go to state 25

state 12

    (9) basic -> plus .

    LPARENS         reduce using rule 9 (basic -> plus .)
    CARET           reduce using rule 9 (basic -> plus .)
    COMMAND         reduce using rule 9 (basic -> plus .)
    LITERAL         reduce using rule 9 (basic -> plus .)
    DIGIT           reduce using rule 9 (basic -> plus .)
    DOT             reduce using rule 9 (basic -> plus .)
    EMARK           reduce using rule 9 (basic -> plus .)
    DOLLAR          reduce using rule 9 (basic -> plus .)
    LSQBRACKET      reduce using rule 9 (basic -> plus .)
    PIPE            reduce using rule 9 (basic -> plus .)
    $end            reduce using rule 9 (basic -> plus .)
    RPARENS         reduce using rule 9 (basic -> plus .)


state 13

    (14) elementary -> command .

    ASTERISK        reduce using rule 14 (elementary -> command .)
    PLUS            reduce using rule 14 (elementary -> command .)
    QMARK           reduce using rule 14 (elementary -> command .)
    LBRACE          reduce using rule 14 (elementary -> command .)
    LPARENS         reduce using rule 14 (elementary -> command .)
    CARET           reduce using rule 14 (elementary -> command .)
    COMMAND         reduce using rule 14 (elementary -> command .)
    LITERAL         reduce using rule 14 (elementary -> command .)
    DIGIT           reduce using rule 14 (elementary -> command .)
    DOT             reduce using rule 14 (elementary -> command .)
    EMARK           reduce using rule 14 (elementary -> command .)
    DOLLAR          reduce using rule 14 (elementary -> command .)
    LSQBRACKET      reduce using rule 14 (elementary -> command .)
    PIPE            reduce using rule 14 (elementary -> command .)
    $end            reduce using rule 14 (elementary -> command .)
    RPARENS         reduce using rule 14 (elementary -> command .)


state 14

    (43) pcharclass -> LSQBRACKET . classitems RSQBRACKET
    (44) ncharclass -> LSQBRACKET . CARET classitems RSQBRACKET
    (45) classitems -> . literal
    (46) classitems -> . literal classitems
    (50) literal -> . LITERAL
    (51) literal -> . DIGIT

    CARET           shift and go to state 36
    LITERAL         shift and go to state 23
    DIGIT           shift and go to state 16

    literal                        shift and go to state 38
    classitems                     shift and go to state 37

state 15

    (28) nomatch -> EMARK .

    ASTERISK        reduce using rule 28 (nomatch -> EMARK .)
    PLUS            reduce using rule 28 (nomatch -> EMARK .)
    QMARK           reduce using rule 28 (nomatch -> EMARK .)
    LBRACE          reduce using rule 28 (nomatch -> EMARK .)
    LPARENS         reduce using rule 28 (nomatch -> EMARK .)
    CARET           reduce using rule 28 (nomatch -> EMARK .)
    COMMAND         reduce using rule 28 (nomatch -> EMARK .)
    LITERAL         reduce using rule 28 (nomatch -> EMARK .)
    DIGIT           reduce using rule 28 (nomatch -> EMARK .)
    DOT             reduce using rule 28 (nomatch -> EMARK .)
    EMARK           reduce using rule 28 (nomatch -> EMARK .)
    DOLLAR          reduce using rule 28 (nomatch -> EMARK .)
    LSQBRACKET      reduce using rule 28 (nomatch -> EMARK .)
    PIPE            reduce using rule 28 (nomatch -> EMARK .)
    RPARENS         reduce using rule 28 (nomatch -> EMARK .)
    $end            reduce using rule 28 (nomatch -> EMARK .)


state 16

    (51) literal -> DIGIT .

    ASTERISK        reduce using rule 51 (literal -> DIGIT .)
    PLUS            reduce using rule 51 (literal -> DIGIT .)
    QMARK           reduce using rule 51 (literal -> DIGIT .)
    LBRACE          reduce using rule 51 (literal -> DIGIT .)
    LPARENS         reduce using rule 51 (literal -> DIGIT .)
    CARET           reduce using rule 51 (literal -> DIGIT .)
    COMMAND         reduce using rule 51 (literal -> DIGIT .)
    LITERAL         reduce using rule 51 (literal -> DIGIT .)
    DIGIT           reduce using rule 51 (literal -> DIGIT .)
    DOT             reduce using rule 51 (literal -> DIGIT .)
    EMARK           reduce using rule 51 (literal -> DIGIT .)
    DOLLAR          reduce using rule 51 (literal -> DIGIT .)
    LSQBRACKET      reduce using rule 51 (literal -> DIGIT .)
    PIPE            reduce using rule 51 (literal -> DIGIT .)
    RPARENS         reduce using rule 51 (literal -> DIGIT .)
    $end            reduce using rule 51 (literal -> DIGIT .)
    RSQBRACKET      reduce using rule 51 (literal -> DIGIT .)


state 17

    (41) charclass -> pcharclass .

    ASTERISK        reduce using rule 41 (charclass -> pcharclass .)
    PLUS            reduce using rule 41 (charclass -> pcharclass .)
    QMARK           reduce using rule 41 (charclass -> pcharclass .)
    LBRACE          reduce using rule 41 (charclass -> pcharclass .)
    LPARENS         reduce using rule 41 (charclass -> pcharclass .)
    CARET           reduce using rule 41 (charclass -> pcharclass .)
    COMMAND         reduce using rule 41 (charclass -> pcharclass .)
    LITERAL         reduce using rule 41 (charclass -> pcharclass .)
    DIGIT           reduce using rule 41 (charclass -> pcharclass .)
    DOT             reduce using rule 41 (charclass -> pcharclass .)
    EMARK           reduce using rule 41 (charclass -> pcharclass .)
    DOLLAR          reduce using rule 41 (charclass -> pcharclass .)
    LSQBRACKET      reduce using rule 41 (charclass -> pcharclass .)
    PIPE            reduce using rule 41 (charclass -> pcharclass .)
    RPARENS         reduce using rule 41 (charclass -> pcharclass .)
    $end            reduce using rule 41 (charclass -> pcharclass .)


state 18

    (47) directionset -> CARET . DIGIT

    DIGIT           shift and go to state 39


state 19

    (7) basic -> elementary .
    (20) asterisk -> elementary . ASTERISK
    (21) plus -> elementary . PLUS
    (22) optional -> elementary . QMARK
    (23) nrepeat -> elementary . LBRACE number RBRACE
    (24) nrepeat -> elementary . LBRACE COMMA number RBRACE
    (25) nrepeat -> elementary . LBRACE number COMMA RBRACE
    (26) nrepeat -> elementary . LBRACE number COMMA number RBRACE

    LPARENS         reduce using rule 7 (basic -> elementary .)
    CARET           reduce using rule 7 (basic -> elementary .)
    COMMAND         reduce using rule 7 (basic -> elementary .)
    LITERAL         reduce using rule 7 (basic -> elementary .)
    DIGIT           reduce using rule 7 (basic -> elementary .)
    DOT             reduce using rule 7 (basic -> elementary .)
    EMARK           reduce using rule 7 (basic -> elementary .)
    DOLLAR          reduce using rule 7 (basic -> elementary .)
    LSQBRACKET      reduce using rule 7 (basic -> elementary .)
    PIPE            reduce using rule 7 (basic -> elementary .)
    $end            reduce using rule 7 (basic -> elementary .)
    RPARENS         reduce using rule 7 (basic -> elementary .)
    ASTERISK        shift and go to state 42
    PLUS            shift and go to state 40
    QMARK           shift and go to state 43
    LBRACE          shift and go to state 41


state 20

    (0) S' -> re .
    (3) alternation -> re . PIPE simple

    PIPE            shift and go to state 44


state 21

    (13) elementary -> directionset .

    ASTERISK        reduce using rule 13 (elementary -> directionset .)
    PLUS            reduce using rule 13 (elementary -> directionset .)
    QMARK           reduce using rule 13 (elementary -> directionset .)
    LBRACE          reduce using rule 13 (elementary -> directionset .)
    LPARENS         reduce using rule 13 (elementary -> directionset .)
    CARET           reduce using rule 13 (elementary -> directionset .)
    COMMAND         reduce using rule 13 (elementary -> directionset .)
    LITERAL         reduce using rule 13 (elementary -> directionset .)
    DIGIT           reduce using rule 13 (elementary -> directionset .)
    DOT             reduce using rule 13 (elementary -> directionset .)
    EMARK           reduce using rule 13 (elementary -> directionset .)
    DOLLAR          reduce using rule 13 (elementary -> directionset .)
    LSQBRACKET      reduce using rule 13 (elementary -> directionset .)
    PIPE            reduce using rule 13 (elementary -> directionset .)
    $end            reduce using rule 13 (elementary -> directionset .)
    RPARENS         reduce using rule 13 (elementary -> directionset .)


state 22

    (1) re -> alternation .

    PIPE            reduce using rule 1 (re -> alternation .)
    RPARENS         reduce using rule 1 (re -> alternation .)
    $end            reduce using rule 1 (re -> alternation .)


state 23

    (50) literal -> LITERAL .

    ASTERISK        reduce using rule 50 (literal -> LITERAL .)
    PLUS            reduce using rule 50 (literal -> LITERAL .)
    QMARK           reduce using rule 50 (literal -> LITERAL .)
    LBRACE          reduce using rule 50 (literal -> LITERAL .)
    LPARENS         reduce using rule 50 (literal -> LITERAL .)
    CARET           reduce using rule 50 (literal -> LITERAL .)
    COMMAND         reduce using rule 50 (literal -> LITERAL .)
    LITERAL         reduce using rule 50 (literal -> LITERAL .)
    DIGIT           reduce using rule 50 (literal -> LITERAL .)
    DOT             reduce using rule 50 (literal -> LITERAL .)
    EMARK           reduce using rule 50 (literal -> LITERAL .)
    DOLLAR          reduce using rule 50 (literal -> LITERAL .)
    LSQBRACKET      reduce using rule 50 (literal -> LITERAL .)
    PIPE            reduce using rule 50 (literal -> LITERAL .)
    RPARENS         reduce using rule 50 (literal -> LITERAL .)
    $end            reduce using rule 50 (literal -> LITERAL .)
    RSQBRACKET      reduce using rule 50 (literal -> LITERAL .)


state 24

    (12) elementary -> group .

    ASTERISK        reduce using rule 12 (elementary -> group .)
    PLUS            reduce using rule 12 (elementary -> group .)
    QMARK           reduce using rule 12 (elementary -> group .)
    LBRACE          reduce using rule 12 (elementary -> group .)
    LPARENS         reduce using rule 12 (elementary -> group .)
    CARET           reduce using rule 12 (elementary -> group .)
    COMMAND         reduce using rule 12 (elementary -> group .)
    LITERAL         reduce using rule 12 (elementary -> group .)
    DIGIT           reduce using rule 12 (elementary -> group .)
    DOT             reduce using rule 12 (elementary -> group .)
    EMARK           reduce using rule 12 (elementary -> group .)
    DOLLAR          reduce using rule 12 (elementary -> group .)
    LSQBRACKET      reduce using rule 12 (elementary -> group .)
    PIPE            reduce using rule 12 (elementary -> group .)
    $end            reduce using rule 12 (elementary -> group .)
    RPARENS         reduce using rule 12 (elementary -> group .)


state 25

    (16) elementary -> charclass .

    ASTERISK        reduce using rule 16 (elementary -> charclass .)
    PLUS            reduce using rule 16 (elementary -> charclass .)
    QMARK           reduce using rule 16 (elementary -> charclass .)
    LBRACE          reduce using rule 16 (elementary -> charclass .)
    LPARENS         reduce using rule 16 (elementary -> charclass .)
    CARET           reduce using rule 16 (elementary -> charclass .)
    COMMAND         reduce using rule 16 (elementary -> charclass .)
    LITERAL         reduce using rule 16 (elementary -> charclass .)
    DIGIT           reduce using rule 16 (elementary -> charclass .)
    DOT             reduce using rule 16 (elementary -> charclass .)
    EMARK           reduce using rule 16 (elementary -> charclass .)
    DOLLAR          reduce using rule 16 (elementary -> charclass .)
    LSQBRACKET      reduce using rule 16 (elementary -> charclass .)
    PIPE            reduce using rule 16 (elementary -> charclass .)
    $end            reduce using rule 16 (elementary -> charclass .)
    RPARENS         reduce using rule 16 (elementary -> charclass .)


state 26

    (49) command -> COMMAND .

    ASTERISK        reduce using rule 49 (command -> COMMAND .)
    PLUS            reduce using rule 49 (command -> COMMAND .)
    QMARK           reduce using rule 49 (command -> COMMAND .)
    LBRACE          reduce using rule 49 (command -> COMMAND .)
    LPARENS         reduce using rule 49 (command -> COMMAND .)
    CARET           reduce using rule 49 (command -> COMMAND .)
    COMMAND         reduce using rule 49 (command -> COMMAND .)
    LITERAL         reduce using rule 49 (command -> COMMAND .)
    DIGIT           reduce using rule 49 (command -> COMMAND .)
    DOT             reduce using rule 49 (command -> COMMAND .)
    EMARK           reduce using rule 49 (command -> COMMAND .)
    DOLLAR          reduce using rule 49 (command -> COMMAND .)
    LSQBRACKET      reduce using rule 49 (command -> COMMAND .)
    PIPE            reduce using rule 49 (command -> COMMAND .)
    $end            reduce using rule 49 (command -> COMMAND .)
    RPARENS         reduce using rule 49 (command -> COMMAND .)


state 27

    (11) basic -> nrepeat .

    LPARENS         reduce using rule 11 (basic -> nrepeat .)
    CARET           reduce using rule 11 (basic -> nrepeat .)
    COMMAND         reduce using rule 11 (basic -> nrepeat .)
    LITERAL         reduce using rule 11 (basic -> nrepeat .)
    DIGIT           reduce using rule 11 (basic -> nrepeat .)
    DOT             reduce using rule 11 (basic -> nrepeat .)
    EMARK           reduce using rule 11 (basic -> nrepeat .)
    DOLLAR          reduce using rule 11 (basic -> nrepeat .)
    LSQBRACKET      reduce using rule 11 (basic -> nrepeat .)
    PIPE            reduce using rule 11 (basic -> nrepeat .)
    $end            reduce using rule 11 (basic -> nrepeat .)
    RPARENS         reduce using rule 11 (basic -> nrepeat .)


state 28

    (17) elementary -> any .

    ASTERISK        reduce using rule 17 (elementary -> any .)
    PLUS            reduce using rule 17 (elementary -> any .)
    QMARK           reduce using rule 17 (elementary -> any .)
    LBRACE          reduce using rule 17 (elementary -> any .)
    LPARENS         reduce using rule 17 (elementary -> any .)
    CARET           reduce using rule 17 (elementary -> any .)
    COMMAND         reduce using rule 17 (elementary -> any .)
    LITERAL         reduce using rule 17 (elementary -> any .)
    DIGIT           reduce using rule 17 (elementary -> any .)
    DOT             reduce using rule 17 (elementary -> any .)
    EMARK           reduce using rule 17 (elementary -> any .)
    DOLLAR          reduce using rule 17 (elementary -> any .)
    LSQBRACKET      reduce using rule 17 (elementary -> any .)
    PIPE            reduce using rule 17 (elementary -> any .)
    $end            reduce using rule 17 (elementary -> any .)
    RPARENS         reduce using rule 17 (elementary -> any .)


state 29

    (27) any -> DOT .
